[gd_scene load_steps=4 format=3 uid="uid://dd1hmakw6lefy"]

[ext_resource type="Script" path="res://items/pickup/loot.gd" id="1_ppn2g"]
[ext_resource type="PackedScene" uid="uid://bp3y3cqwp1iqf" path="res://ui/labels/actions/press_button.tscn" id="3_s12q5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uqxw5"]
radius = 41.0122

[node name="Loot" type="Area2D"]
script = ExtResource("1_ppn2g")

[node name="ItemSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_uqxw5")

[node name="PressButton" parent="." instance=ExtResource("3_s12q5")]
unique_name_in_owner = true
visible = false
z_index = 10
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -82.0
offset_top = -94.0
offset_right = -82.0
offset_bottom = -94.0
grow_horizontal = 1
grow_vertical = 1
size_flags_horizontal = 4
size_flags_vertical = 4
label = "Pick item"
button_label = "F"
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
